--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,55 +1,91 @@
+body {
+	background-image: url('../images/cuisine.jpg');
+	background-size: 100%;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+}
+
 #main {
-	width: 800px;
+	width: 900px;
 	margin: 0 auto;
+	height: 100%;
 }
 
 header {
 	display: flex;
 	width: 100%;
 	height: 70px;
-	background-color: orange;
+	padding: 5px;
+	background-color: white;
 	margin-bottom: 20px;
 }
 
 h1 {
+	font-size: 40px;
+	font-weight: bold;
 	text-align: center;
-	color: white;
-	font-family: Helvetica;
+	color: black;
+	font-family: shadows into light;
 	margin: 10px auto;
 }
 
 #search_form {
+	padding: 10px;
 	float: left;
 	padding: 20px;
-	background-color: skyblue;
-	font-family: Helvetica;
-	color: white;
+	background-color: white;
+	font-family: shadows into light;
+	font-weight: bold;
+	color: black;
 	width: 250px;
 	border-radius: 10px;
 	margin: 0 auto;
 }
 
 #results {
+	height: 400px;
+	overflow: auto;
+	border-radius: 10px;
 	position: relative;
-	top: -250px;
+	top: -350px;
 	width: 300px;
 }
 
 #result {
-	font-family: Helvetica;
-	background-color: green;
+	font-family: shadows into light;
+	font-weight: bold;
+	font-size: 17;
+	background-color: white;
 	border-radius: 10px;
 	margin: 20 auto;
-	color: white;
+	color: black;
 	padding: 20px;
 }
 
 #map {
 	position: fixed;
-	right: -10%;
-  width: 400px;
-  height: 400px;
+	right: -150px;
+  width: 550px;
+  height: 500px;
   -moz-box-shadow: 0px 5px 20px #ccc;
   -webkit-box-shadow: 0px 5px 20px #ccc;
   box-shadow: 0px 5px 20px #ccc;
+}
+
+button {
+	background-color: black;
+	color: white;
+	font-family: shadows into light;
+	font-weight: bold;
+	height: 25px;
+	border-radius: 5px;
+}
+
+button:hover {
+	background-color: orange;
+	color: white;
+	font-family: shadows into light;
+	font-weight: bold;
+	height: 25px;
+	border-radius: 5px;
 }
